refactor: Revert code back to Java 11